Revision history for Geo::Location::Point

0.12
	Better argument validation

0.11	Mon Nov 13 13:35:32 EST 2023
	Fix circular dependancy

0.10	Wed Nov  8 11:41:18 EST 2023
	When setting the location manually, the new location was not stored

0.09	Wed Jun 14 20:52:13 EDT 2023
	Increased the test coverage
	Added the tz() method

0.08	Fri Mar 17 13:13:30 EDT 2023
	Support the messages latitude and longitude

0.07	Sat Feb 25 20:30:45 EST 2023
	Fix case in field name traversal
	Calls to as_string after setting a field after
		calling as_string would return the old value
	Fixed the documentation of and testing of equal()

0.06	Sat Oct 31 08:40:18 EDT 2020
	Fix the equals() and not_equals() functions

0.05	Sat Oct 31 05:24:53 EDT 2020
	Fix https://github.com/nigelhorne/Geo-Coder-Free/issues/48
	Added equal() and overloaded == to map to map to it

0.04	Fri Oct 30 09:31:17 EDT 2020
	Upgrade from Dist::Zilla to ExtUtils::MakeMaker
	Added overload '""' to map to as_string

0.03	Wed 17 Apr 16:35:20 EDT 2019
	Don't turn GB into Gb
	Improved handling of fields with different cases

0.02	Fri Mar 29 18:28:10 EDT 2019
	as_string() now returns the location attribute if that has been set
	minimum version set to 5.10.0 because of //=
	Carp on error rather than just dying
	Allow latitude and longitude to be given instead of lat and long
	Import values from MaxMind database

0.01	Tue 19 Mar 18:16:48 EDT 2019
        First version