@@ -9,6 +9,7 @@ t/00-load.t
 t/10-compile.t
 t/20-new.t
 t/as_string.t
+t/as_uri.t
 t/carp.t
 t/comment-spelling.t
 t/coverage.t
